--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="{{ url_for('home') }}">Domov</a>
-        <a href="{{ url_for('requests') }}">Požiadavky</a>
-        <a href="{{ url_for('processed_requests') }}">Historia požiadaviek</a>
-        <a href="{{ url_for('admin') }}">Správa požiadaviek</a>
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('requests') }}">Add request</a>
+        <a href="{{ url_for('processed_requests') }}">History</a>
+        <a href="{{ url_for('admin') }}">Admin</a>
     </div>
 
     <main>
