--- a/templates/admin.html
+++ b/templates/admin.html
@@ -5,13 +5,13 @@
 {% block content %}
 </div>
 <div class="container">
-    <h2>Požiadavky na opravu</h2>
+    <h2>Requests</h2>
     <ul>
         <li>
-            Požiadavka 1 - <button class="btn-progress">Oprava prebieha</button> <button class="btn-complete">Dokončené</button> <button class="btn-reject">Zamietnuť</button>
+            Požiadavka 1 - <button class="btn-progress">Work in progress</button> <button class="btn-complete">Complete</button> <button class="btn-reject">Reject</button>
         </li>
         <li>
-            Požiadavka 2 - <button class="btn-progress">Oprava prebieha</button> <button class="btn-complete">Dokončené</button> <button class="btn-reject">Zamietnuť</button>
+            Požiadavka 2 - <button class="btn-progress">Work in progress</button> <button class="btn-complete">Complete</button> <button class="btn-reject">Reject</button>
         </li>
     </ul>
 </div>
