--- a/templates/processed_requests.html
+++ b/templates/processed_requests.html
@@ -6,7 +6,7 @@
 </div>
     <div class="container">
         
-    <h2>Moje požiadavky</h2>
+    <h2>Finished requests</h2>
     <ul>
         <li>Požiadavka 1 - Stav: Čaká na spracovanie</li>
         <li>Požiadavka 2 - Stav: Oprava prebieha</li>
