--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,7 @@
 
 
 {% block content %}
-    <div class="container">
-        <h2>Prihlásenie</h2>
-        <form>
-            <label for="username">Používateľské meno:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
-            <label for="password">Heslo:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <button type="submit">Prihlásiť sa</button>
-        </form>
-    </div>
+
+<h1>VITAJTE</h1>
 
 {% endblock %}
