Adding rederiction buttons
'go to login' button added to register page and 'go to registration' button added to a login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -31,6 +31,10 @@
                 {{ form.password.label }} <br> {{ form.password() }} <br>
                 {{ form.submit() }}
             </form>
+
+            <a href="{{ url_for('register') }}">
+                <button type="button">Register here</button>
+            </a>
         </div>
     </div>
 </body>
