--- a/templates/requests.html
+++ b/templates/requests.html
@@ -22,7 +22,7 @@
         <br>
         <button type="submit">Odoslať požiadavku</button>
     </form>
-    <h2>Unfinished requests</h2>
+    <h2>Active requests</h2>
     <ul>
         <li>Požiadavka 1 - Stav: Čaká na spracovanie</li>
         <li>Požiadavka 2 - Stav: Oprava prebieha</li>
