Adding and displaying requests (teacher)

--- a/templates/processed_requests.html
+++ b/templates/processed_requests.html
@@ -6,11 +6,8 @@
 </div>
     <div class="container">
         
-    <h2>Finished requests</h2>
-    <ul>
-        <li>Požiadavka 1 - Stav: Čaká na spracovanie</li>
-        <li>Požiadavka 2 - Stav: Oprava prebieha</li>
-    </ul>
+    <h2>Completed requests</h2>
+
     </div>
     
 {% endblock %}
