--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "_base.html" %}
 
-{% block title %}Prihlasenie{% endblock %}
-
+{% block title %}Domov{% endblock %}
 
 {% block content %}
-
-<h1>VITAJTE</h1>
-
+<div class="welcome-container">
+    <h1 class="welcome-text">VITAJTE</h1>
+    <a href="{{ url_for('login') }}" class="logout-button">Odhlásiť sa</a>
+</div>
 {% endblock %}
